[package]
name = "s3-utils"
version = "1.1.0"
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "Various tools and extensions around Amazon S3"
repository = "https://github.com/whitfin/s3-utils"
keywords = ["aws", "amazon", "s3", "filesystem"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "whitfin/s3-utils" }

[dependencies]
clap = "2.33"
log = { version = "0.4", features = ["std"] }
quick-xml = "0.17"
regex = "1.3"
tokio = "0.2"

# formatting libraries
humantime = "2.0"
pretty-bytes = "0.2"

# AWS/S3 libraries
rusoto_core = "0.43.0-beta.1"
rusoto_s3 = "0.43.0-beta.1"
